--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: Saksham Gupta
+description: Aspiring Biomedical Scientist
+
 remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+
