--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 title: Saksham Gupta
 description: Aspiring Biomedical Scientist
-
+logo: assets/self_pic.jpg
 remote_theme: pages-themes/minimal@v0.2.0
-
-
