--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
 title: Saksham Gupta
 description: Aspiring Biomedical Scientist
 logo: assets/self_pic.jpg
+📧 [Gmail](mailto:saksham.gupta.y19@gmail.com)  
+🔗 [LinkedIn](https://www.linkedin.com/in/saksham-gupta-392a3a202/)  
+🐙 [GitHub](https://github.com/saksham132)  
+
 remote_theme: pages-themes/minimal@v0.2.0
